[tool.poetry]
name = "springer-downloader"
version = "0.1.0"
description = ""
authors = ["Yuma Hiramatsu"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.3"
requests = "^2.23.0"
tqdm = "^4.45.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.770"
yapf = "^0.29.0"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
